--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.7.5",
     "lucide-react": "^0.555.0",
+    "negotiator": "^1.0.0",
     "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
