--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lucide-react": "^0.555.0",
     "negotiator": "^1.0.0",
     "next": "^16.1.1",
+    "next-intl": "^4.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "simple-icons": "^16.3.0"
+    "simple-icons": "^16.3.0",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
